На проверку + отчет_вторая_итерация